--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 <b>Journal Papers </b>
 <table cellpadding="4" cellspacing="0" width="600" >
 
+<tr valign="top">
+<td>
+R.&nbsp;G. McKilliam, A. Pollok, B. Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
+ Carrier phase and amplitude estimation for phase shift keying using
+  pilots and data. Jan. 2013.
+[&nbsp;<a href="http://arxiv.org/abs/1301.1760">arxiv</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/ComplexAmplitudeEstimationPSK">code</a>&nbsp;]
+</td>
+</tr>
+
+<tr valign="top">
+<td>
+R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, B.&nbsp;N. Vellambi.
+ Polynomial phase estimation by phase unwrapping. Nov. 2012.
+[&nbsp;<a href="http://arxiv.org/abs/1211.0374">arxiv</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/ppsphaseunwrapping">code</a>&nbsp;]
+</td>
+</tr>
+
 <!-- <tr valign="top">
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
@@ -58,7 +75,7 @@ R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
 </tr> -->
 
 <tr valign="top">
-<td class="bibtexitem">
+<td>
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
  On the error performance of the <em>A</em><sub>n</sub> lattices.
   <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.
