--- a/index.html
+++ b/index.html
@@ -48,33 +48,6 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 <b>Journal Papers </b>
 <table cellpadding="4" cellspacing="0" width="600" >
 
-<!-- <tr valign="top">
-<td class="bibtexitem">
-R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
- On the Cram&eacute;r-Rao bound for polynomial phase signals.
- submitted to <em>IEEE Signal Processing Letters</em>, Aug 2012. 
-[&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
-</td>
-</tr> -->
-
-<tr valign="top">
-<td class="bibtexitem">
-R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
- On the error performance of the <em>A</em><sub>n</sub> lattices.
-  <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.
-	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TIT.2012.2199462">doi</a>&nbsp;|&nbsp;<a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/An_lattice_error_probability">code</a>&nbsp;]
-</td>
-</tr>
-
-<tr valign="top">
-	<td>
-	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
- Direction estimation by minimum squared arc length.
- <em>IEEE Trans. Sig. Process.</em>, 60(5):2115-2124, May 2012.
-	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2012.2186444">doi</a>&nbsp;|&nbsp;<a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
-	</td>
-	</tr>
-
 	<tr valign="top">
 		<td>
 		R.&nbsp;G. McKilliam, Barry&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and Bill Moran.
@@ -275,6 +248,37 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 		</td>
 	</tr>
 </table>
+
+<br>
+<b> Preprints </b>
+
+<!-- <tr valign="top">
+<td class="bibtexitem">
+R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
+ On the Cram&eacute;r-Rao bound for polynomial phase signals.
+ submitted to <em>IEEE Signal Processing Letters</em>, Aug 2012. 
+[&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
+</td>
+</tr> -->
+
+<tr valign="top">
+<td class="bibtexitem">
+R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
+ On the error performance of the <em>A</em><sub>n</sub> lattices.
+  <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TIT.2012.2199462">doi</a>&nbsp;|&nbsp;<a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/An_lattice_error_probability">code</a>&nbsp;]
+</td>
+</tr>
+
+<tr valign="top">
+	<td>
+	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
+ Direction estimation by minimum squared arc length.
+ <em>IEEE Trans. Sig. Process.</em>, 60(5):2115-2124, May 2012.
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2012.2186444">doi</a>&nbsp;|&nbsp;<a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
+	</td>
+</tr>
+
 
 <br>
 <b>Invited Talks</b>
