--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 <br>
 <b> Preprints </b>
 
+<table cellpadding="4" cellspacing="0" width="600">
 <tr valign="top">
 <td>
 R.&nbsp;G. McKilliam, A. Pollok, B. Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -295,6 +296,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Mor
 [&nbsp;<a href="http://arxiv.org/abs/1211.0374">arxiv</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/ppsphaseunwrapping">code</a>&nbsp;]
 </td>
 </tr>
+</table>
 
 
 <br>
