added ppscrb preprint

--- a/index.html
+++ b/index.html
@@ -289,6 +289,15 @@ R.&nbsp;G. McKilliam, A. Pollok, B. Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&
 </td>
 </tr>
 
+<table cellpadding="4" cellspacing="0" width="600">
+<tr valign="top">
+<td>
+R.&nbsp;G. McKilliam, A. Pollok.
+ On the Cramer-Rao bound for polynomial phase signals. Oct. 2012.
+[&nbsp;<a href="papers/polyphasecrbs.pdf">pdf</a>&nbsp;]
+</td>
+</tr>
+
 <tr valign="top">
 <td>
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, B.&nbsp;N. Vellambi.
