--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 		<br> Building W, University of South Australia, 
 		<br> Mawson Lakes, SA, Australia, 5095 </p>
 		<p> <b>Email</b> robby.mckilliam_at_unisa.edu.au</p>
-		<p>&nbsp;</td>
+		<p>&nbsp;
+		<!--<p> <it>Unfortunately practice generally precedes theory, and it is the usual fate of mankind to get things done in some boggling way first, and find out afterward how they could have been done much more easily</it>  <br>
+		  Charles S. Peirce, `Introductory Lecture on the Study of Logic', 1882. </p>
+		</td>-->
 		<td width="15">&nbsp;</td>
 		<td valign="top" width="432">
 		<!--<img border="0" src="profilepic.jpg" width="228" height="352"></td>-->
