--- a/robby_bib.html
+++ b/robby_bib.html
@@ -33,9 +33,19 @@
 @unpublished{<a href="robby.html#McKilliam_leastsqPSKpilotsdata_2012">McKilliam_leastsqPSKpilotsdata_2012</a>,
   author = {R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
   title = {Carrier phase and amplitude estimation for phase shift keying using pilots and data},
-  note = {to be submitted to IEEE Transactions on Signal Processing},
-  year = 2012,
-  month = {Aug.}
+  note = {submitted to IEEE Transactions on Signal Processing},
+  year = 2013,
+  month = {Jan.}
+}
+</pre>
+
+<a name="McKilliam_leastsqPSKnoncoICASSP_2012"></a><pre>
+@unpublished{<a href="robby.html#McKilliam_leastsqPSKnoncoICASSP_2012">McKilliam_leastsqPSKnoncoICASSP_2012</a>,
+  author = {R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
+  title = {Noncoherent least squares estimators of carrier phase and amplitude},
+  note = {accepted to {IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
+  year = 2013,
+  month = {May}
 }
 </pre>
 
@@ -65,7 +75,7 @@
 @unpublished{<a href="robby.html#McKilliam_LSU_polyest_part1_2012">McKilliam_LSU_polyest_part1_2012</a>,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
   title = {Polynomial phase estimation by phase unwrapping 1: Identifiability and strong consistency},
-  note = {to be submitted to {IEEE Transactions on Signal Processing}},
+  note = {submitted to {IEEE Transactions on Signal Processing}},
   year = 2012,
   month = {Aug}
 }
@@ -75,7 +85,7 @@
 @unpublished{<a href="robby.html#McKilliam_LSU_polyest_part2_2012">McKilliam_LSU_polyest_part2_2012</a>,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
   title = {Polynomial phase estimation by phase unwrapping 2: Asymptotic normality and simulations},
-  note = {to be submitted to {IEEE Transactions on Signal Processing}},
+  note = {submitted to {IEEE Transactions on Signal Processing}},
   year = 2012,
   month = {Aug}
 }
