--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <b>Biography</b>
 <table cellpadding="0" cellspacing="0" width="800">
-	<!-- MSTableType="layout" -->
 	<tr>
 		<td valign="top" width="380"><span class="nfakPe">
 Robby McKilliam is at the Institute for Telecommunications Research at the University of South Australia, Adelaide.  His fields of interest are lattice theory, estimation theory, statistical signal processing and communications.  In December 2010 he completed his PhD at the University of Queensland, Brisbane, Australia. In 2006 he completed his undergraduate studies in computer systems engineering and mathematics at the University of Queensland. Robby's recreational interests are: swimming, skiing, math, motorbikes, rock climbing, videogames, wine, beer and coffee.
@@ -31,6 +30,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 		<td valign="top" width="432">
 		<!--<img border="0" src="profilepic.jpg" width="228" height="352"></td>-->
 		<img border="0" src="profile2.jpg" width="192" height="271"></td>
+		<!--<img border="0" src="littlecreatures.jpg" width="192" height="271"></td>-->
 	</tr>
 </table>
 <br>
