--- a/notindex.html
+++ b/notindex.html
@@ -73,7 +73,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 	<td>
 	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
  Direction estimation by minimum squared arc length.
- <em>IEEE Trans. Sig. Process.</em>, 60(5):2115-2124, May 2012.
+ <em>IEEE Trans. Signal Process.</em>, 60(5):2115-2124, May 2012.
 	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2012.2186444">doi</a>&nbsp;|&nbsp;<a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
 	</td>
 	</tr>
@@ -125,6 +125,16 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 
 <tr valign="top">
 <td class="bibtexitem">
+B.&nbsp;G.&nbsp;Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G.&nbsp;McKilliam.
+ On the Periodogram Estimator of Period from Sparse, Noisy Timing Data.
+ accepted to Asilomar Conference on Signals, Systems, and Computers, Nov.
+  2013.
+[&nbsp;<a href="robby_bib.html#Quinn20013asilomar_period_est">bib</a>&nbsp;]
+</td>
+</tr>
+
+<tr valign="top">
+<td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
  Noncoherent least squares estimators of carrier phase and amplitude.
  accepted to IEEE Internat. Conf. Acoust. Spe. Sig. Process., May
@@ -159,13 +169,13 @@ R.&nbsp;G. McKilliam and A.&nbsp;Grant.
 
 <tr valign="top">
 <td>
-J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilliam.
+J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
  Code-acquisition via the projection method for CDMA systems in high
   MAI channels.
- accepted to the International Conference on Communications (ICC),
-  Jan. 2012. 
-[&nbsp;<a href="robby_bib.html#Kodithuwakku_projection_PIC_ICC_2012">bib</a>&nbsp;]
-
+ In <em>Communications (ICC), 2012 IEEE International Conference on</em>,
+  pages 2575-2579, 2012.
+[&nbsp;<a href="robby_bib.html#6363913">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/ICC.2012.6363913">doi</a>&nbsp;]
 </td>
 </tr>
 
@@ -340,6 +350,7 @@ Next to many of the papers listed above is a link named `code'.  This links to a
 <br>
 <b>Teaching</b>
 <table cellpadding="4" cellspacing="0" width="600">
+<tr valign="top"><td> Signals and Systems (EEET 3041). University of South Australia. 2013. </td></tr>
 <tr valign="top"><td> Modern Communication Systems (EEET 4036). University of South Australia. 2012. </td></tr>
 <tr valign="top"><td> Digital Communications (COMS 4100). University of Queensland. 2010. </td></tr>
 </table>
@@ -376,9 +387,9 @@ Next to many of the papers listed above is a link named `code'.  This links to a
 <b>Other Activities</b>
 <table>
 <!--<tr valign="top"><td> Local Finance Chair, Internation Symposium on Information Theory and it Applications (ISITA), 2014</td></tr>-->
-<tr valign="top"><td>Technical Programme Chair, Australian Communications Theory Workshop (AusCTW), 2013</td></tr>
-<tr valign="top"><td>Technical Programme Committee, Australian Communications Theory Workshop (AusCTW), 2012</td></tr>
-<tr valign="top"><td>Publications Co-Chair, Defense Applications of Signal Processing Workshop (DASP), 2011</td></tr>
+<tr valign="top"><td>Technical Programme Chair, Australian Communications Theory Workshop (AusCTW), Adelaide 2013</td></tr>
+<tr valign="top"><td>Technical Programme Committee, Australian Communications Theory Workshop (AusCTW), Wellington 2012</td></tr>
+<tr valign="top"><td>Publications Co-Chair, Defense Applications of Signal Processing Workshop (DASP), Coolum 2011</td></tr>
 <tr valign="top"><td>Chair of the IEEE University of Queensland Student Branch 2009</td></tr>
 <!--<tr valign="top"><td>Robby manages two open source software projects.&nbsp;
 <a href="http://rubyforge.org/projects/rubypost/">Rubypost</a> and
