--- a/notindex.html
+++ b/notindex.html
@@ -375,7 +375,7 @@ Next to many of the papers listed above is a link named `code'.  This links to a
 <br>
 <b>Other Activities</b>
 <table>
-<!--<tr valign="top"><td> Local Finance Chair, Internation Symposium on Information Theory and it Applications (ISITA), 2014</td></tr>-->
+<!--<tr valign="top"><td> Local Finance Chair, International Symposium on Information Theory and it Applications (ISITA), 2014</td></tr>-->
 <tr valign="top"><td>Technical Programme Chair, Australian Communications Theory Workshop (AusCTW), 2013</td></tr>
 <tr valign="top"><td>Technical Programme Committee, Australian Communications Theory Workshop (AusCTW), 2012</td></tr>
 <tr valign="top"><td>Publications Co-Chair, Defense Applications of Signal Processing Workshop (DASP), 2011</td></tr>
