--- a/notindex.html
+++ b/notindex.html
@@ -350,7 +350,7 @@ Next to many of the papers listed above is a link named `code'.  This links to a
 <br>
 <b>Teaching</b>
 <table cellpadding="4" cellspacing="0" width="600">
-<tr valign="top"><td> <a href="./signalsandsystems/">Signals and Systems (EEET 3041)</a>. University of South Australia. 2013. </td></tr>
+<tr valign="top"><td> <a href="./signalsandsystems/index.html">Signals and Systems (EEET 3041)</a>. University of South Australia. 2013. </td></tr>
 <tr valign="top"><td> Modern Communication Systems (EEET 4036). University of South Australia. 2012. </td></tr>
 <tr valign="top"><td> Digital Communications (COMS 4100). University of Queensland. 2010. </td></tr>
 </table>
