--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -23,13 +23,14 @@
 Welcome to Signals and Systems EEET3041 for 2013.  My name is <a href="../">Robby McKilliam</a> and I'll be your lecturer.  In this course we learn how to analyse linear-time invariant systems that are used to model and design electrical circuits, mechanical machines, and electro-mechanical devices.
 </p>
 <p>
-I studied Engineering and Mathematics at the University of Queensland and completed my PhD there in 2010.  I've since worked at the <a href="http://www.itr.unisa.edu.au/">Institute for Telecommunications Research</a> at the Mawson Lakes Campus.  My research interests are primarily statistical signal processing, and number theory.
+I studied Engineering and Mathematics at the University of Queensland and completed my PhD there in 2010.  I've since worked at the <a href="http://www.itr.unisa.edu.au/">Institute for Telecommunications Research</a> at the Mawson Lakes Campus.  My research interests are primarily statistical signal processing and number theory.
 </p>
 <p>
-Lecture notes, and corresponding software will be added to this website as the course progresses.
+Lecture notes and corresponding software will be added to this website as the course progresses.
 </p>
 </td></tr>
 </table>
+
 <br>
 <table cellpadding="0" cellspacing="0" width="200">
 <tr valign="top">
@@ -41,16 +42,8 @@ Lecture notes, and corresponding software will be added to this website as the c
 
 <br>
 <table cellpadding="0" cellspacing="0" width="200">
-<tr valign="top">
-<td>
-Videos
-</td>
-</tr>
-<tr valign="top">
-<td>
-<a href="http://lrs.unisa.edu.au/ess/echo/presentation/8046f776-6a91-4188-a2ef-e80e78af2f6f">Lecture 1</a>
-</td>
-</tr>
+<tr valign="top"><td>Videos</td></tr>
+<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8046f776-6a91-4188-a2ef-e80e78af2f6f">Lecture 1</a></td></tr>
 </table>
 
 </body>
