added new profile pics

--- a/notindex.html
+++ b/notindex.html
@@ -29,7 +29,9 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 		<td width="15">&nbsp;</td>
 		<td valign="top" width="432">
 		<!--<img border="0" src="profilepic.jpg" width="228" height="352"></td>-->
-		<img border="0" src="profile2.jpg" width="192" height="271"></td>
+		<!--<img border="0" src="profile2.jpg" width="192" height="271"></td>-->
+		<img border="0" src="profilewedding.jpg" width="200" height="275"></td>
+		<!--<img border="0" src="profilewedding2.jpg" width="192" height="281"></td>-->
 		<!--<img border="0" src="littlecreatures.jpg" width="192" height="271"></td>-->
 	</tr>
 </table>
