--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -32,10 +32,16 @@ Lecture notes and corresponding software will be added to this website as the co
 </table>
 
 <br>
-<table cellpadding="0" cellspacing="0" width="200">
+<table cellpadding="0" cellspacing="0" width="500">
 <tr valign="top">
 <td>
 <a href="./signalsandsystems.pdf">Lecture notes</a>
+</td>
+<td>
+<a href="./test.zip">Software</a>
+</td>
+<td>
+Assignments: <a href="./practical.pdf">practical</a>, <a href="./theoryassignment.pdf">theory</a>
 </td>
 </tr>
 </table>
