--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -50,6 +50,7 @@ Assignments: <a href="./practical.pdf">practical</a>, <a href="./theoryassignmen
 <table cellpadding="0" cellspacing="0" width="200">
 <tr valign="top"><td>Videos</td></tr>
 <tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8046f776-6a91-4188-a2ef-e80e78af2f6f">Lecture 1</a></td></tr>
+<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/64b9fe2a-9676-42ac-b8b5-2d8c2c67ba7c">Lecture 2</a></td></tr>
 </table>
 
 </body>
