--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -35,13 +35,13 @@ Lecture notes and corresponding software will be added to this website as the co
 <table cellpadding="0" cellspacing="0" width="500">
 <tr valign="top">
 <td>
-<a href="./signalsandsystems.pdf">Lecture notes</a>
+<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystems.pdf">Lecture notes</a>
 </td>
 <td>
-<a href="./test.zip">Software</a>
+<a href="http://robbymckilliam.github.io/signalsandsystems/test.zip">Software</a>
 </td>
 <td>
-Assignments: <a href="./practical.pdf">practical</a>, <a href="./theoryassignment.pdf">theory</a>
+Assignments: <a href="http://robbymckilliam.github.io/signalsandsystems/practical.pdf">practical</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/theoryassignment.pdf">theory</a>
 </td>
 </tr>
 </table>
