changed lecture recording links

--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -49,8 +49,9 @@ Assignments: <a href="./practical.pdf">practical</a>, <a href="./theoryassignmen
 <br>
 <table cellpadding="0" cellspacing="0" width="200">
 <tr valign="top"><td>Videos</td></tr>
-<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8046f776-6a91-4188-a2ef-e80e78af2f6f">Lecture 1</a></td></tr>
-<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/64b9fe2a-9676-42ac-b8b5-2d8c2c67ba7c">Lecture 2</a></td></tr>
+<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8046f776-6a91-4188-a2ef-e80e78af2f6f/media.m4v">Lecture 1</a></td></tr>
+<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/64b9fe2a-9676-42ac-b8b5-2d8c2c67ba7c/media.m4v">Lecture 2</a></td></tr>
+<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8497d3b8-60c5-4c9a-b63a-862963daf4ae/media.m4v">Lecture 3</a></td></tr>
 </table>
 
 </body>
