--- a/notindex.html
+++ b/notindex.html
@@ -53,14 +53,14 @@ Robby McKilliam is a post doc at the Institute for Telecommunications Research a
 <b>Journal Papers </b>
 <table cellpadding="4" cellspacing="0" width="600" >
 
-<!-- <tr valign="top">
+<tr valign="top">
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
  On the Cram&eacute;r-Rao bound for polynomial phase signals.
- submitted to <em>IEEE Signal Processing Letters</em>, Aug 2012. 
+ accepted to <em>Signal Processing</em>, Aug 2013. 
 [&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
 </td>
-</tr> -->
+</tr>
 
 <tr valign="top">
 <td>
@@ -311,15 +311,6 @@ R.&nbsp;G. McKilliam, A. Pollok, B. Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&
  Carrier phase and amplitude estimation for phase shift keying using
   pilots and data. Jan. 2013.
 [&nbsp;<a href="http://arxiv.org/abs/1301.1760">arxiv</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/ComplexAmplitudeEstimationPSK">code</a>&nbsp;]
-</td>
-</tr>
-
-<table cellpadding="4" cellspacing="0" width="600">
-<tr valign="top">
-<td>
-R.&nbsp;G. McKilliam, A. Pollok.
- On the Cramer-Rao bound for polynomial phase signals. Oct. 2012.
-[&nbsp;<a href="papers/polyphasecrbs.pdf">pdf</a>&nbsp;]
 </td>
 </tr>
 
