--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -47,12 +47,15 @@ Assignments: <a href="http://robbymckilliam.github.io/signalsandsystems/practica
 </table>
 
 <br>
-<table cellpadding="0" cellspacing="0" width="200">
-<tr valign="top"><td>Videos</td></tr>
-<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8046f776-6a91-4188-a2ef-e80e78af2f6f/media.m4v">Lecture 1</a></td></tr>
-<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/64b9fe2a-9676-42ac-b8b5-2d8c2c67ba7c/media.m4v">Lecture 2</a></td></tr>
-<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8497d3b8-60c5-4c9a-b63a-862963daf4ae/media.m4v">Lecture 3</a></td></tr>
-<tr valign="top"><td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/40ba35dc-5ba6-47b3-910b-6e1e2516af10/media.m4v">Lecture 4</a></td></tr>
+<table cellpadding="10" cellspacing="0">
+<tr valign="top" align="left">
+<td>Videos: </td>
+<td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8046f776-6a91-4188-a2ef-e80e78af2f6f/media.m4v">1</a></td>
+<td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/64b9fe2a-9676-42ac-b8b5-2d8c2c67ba7c/media.m4v">2</a></td>
+<td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/8497d3b8-60c5-4c9a-b63a-862963daf4ae/media.m4v">3</a></td>
+<td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/40ba35dc-5ba6-47b3-910b-6e1e2516af10/media.m4v">4</a></td>
+<td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/4880d690-0a71-40c7-8707-ce835802fa2a/media.m4v">5</a></td>
+</tr>
 </table>
 
 </body>
