added doi to poly crb paper

--- a/notindex.html
+++ b/notindex.html
@@ -58,7 +58,7 @@ Robby McKilliam is a post doc at the Institute for Telecommunications Research a
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
  On the Cram&eacute;r-Rao bound for polynomial phase signals.
  accepted to <em>Signal Processing</em>, Aug 2013. 
-[&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
+[&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1016/j.sigpro.2013.08.007">doi</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
 </td>
 </tr>
 
