--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -56,6 +56,7 @@ Assignments: <a href="http://robbymckilliam.github.io/signalsandsystems/practica
 <td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/40ba35dc-5ba6-47b3-910b-6e1e2516af10/media.m4v">4</a></td>
 <td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/4880d690-0a71-40c7-8707-ce835802fa2a/media.m4v">5</a></td>
 <td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/99e92505-a454-4638-bc16-9f482718de41/media.m4v">6</a></td>
+<td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/348dd47d-d4bd-49ca-b886-cb1a50809e69/media.m4v">7</a></td>
 </tr>
 </table>
 
